--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Can LLMs train themselves as drivers?</title>
 
-    <meta name="description" content="Can LLMs train themselves as drivers?">
+    <meta name="description" content="ST-Co-Pilot">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- <base href="/"> -->
@@ -111,9 +111,9 @@
     <div class="container" id="main">
         
         <div class="row">
-            <p></p> <p></p>
+            <p></p> <p></p> <p></p>
             <div class="col-md-12 text-center">
-                <strong><font size="+3">Can LLMs train themselves as drivers?</font></strong> 
+                <strong><font size="+5">Can LLMs train themselves as drivers?</font></strong> 
             </div>
         </div>
         <div class="row">
@@ -215,7 +215,7 @@
                     Citation 
                 </h3> 
                 <!-- <a href="">[arxiv version]</a> -->
-                <div class="form-group col-md-10 col-md-offset-1">
+                <!-- <div class="form-group col-md-10 col-md-offset-1">
                     <textarea id="bibtex" class="form-control" readonly>
 @inproceedings{...,
     title={Can LLMs train themselves as drivers?},
@@ -223,10 +223,20 @@
     booktitle={...},
     year={2023}
 }</textarea>
-                </div>
+                </div> -->
             </div>
         </div>
 
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2 col-xs-12">
+                <h3>
+                    Related Work
+                </h3>
+                <p class="list-inline">
+                  <li>S. Wang, Y. Zhu, Z. Li, Y. Wang, L. Li and Z. He, <strong>"ChatGPT as Your Vehicle Co-Pilot: An Initial Attempt,"</strong> in IEEE Transactions on Intelligent Vehicles, <a href = https://ieeexplore.ieee.org/abstract/document/10286969>doi: 10.1109/TIV.2023.3325300.</a></li>
+                </p>
+            </div>
+        </div>
 
         <!-- <div class="row">
             <div class="col-md-8 col-md-offset-2 col-xs-12">
