--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
             </div>
         </div> 
 
-        <img src="img/other/fewshot1.jpeg" height="600px"> </a>
-        <img src="img/other/fewshot2.jpeg" height="600px"> </a>
+        <img src="img/other/hh1.jpeg" height="600px"> </a>
+        <img src="img/other/hh2.jpeg" height="600px"> </a>
         <img src="img/other/image.jpeg" height="600px"> </a>
         <img src="img/other/phase.jpeg" height="600px"> </a>
         <img src="img/other/phase2.jpeg" height="600px"> </a>
